crates/macro/ui-tests/start-function.stderr
error: the start function cannot have arguments
 --> ui-tests/start-function.rs:7:9
  |
7 | fn foo2(x: u32) {}
  |         ^^^^^^

error: the start function cannot have generics
  --> ui-tests/start-function.rs:10:8
   |
10 | fn foo3<T>() {}
   |        ^^^

error[E0599]: no method named `__wasm_bindgen_start` found for struct `StartWrapper` in the current scope
  --> ui-tests/start-function.rs:15:1
   |
15 | #[wasm_bindgen(start)]
   | ^^^^^^^^^^^^^^^^^^^^^^ method not found in `StartWrapper<Result<wasm_bindgen::JsValue, ()>>`
   |
   = note: this error originates in the attribute macro `wasm_bindgen` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no method named `__wasm_bindgen_start` found for struct `StartWrapper` in the current scope
  --> ui-tests/start-function.rs:18:1
   |
18 | #[wasm_bindgen(start)]
   | ^^^^^^^^^^^^^^^^^^^^^^ method not found in `StartWrapper<Result<wasm_bindgen::JsValue, wasm_bindgen::JsValue>>`
   |
   = note: this error originates in the attribute macro `wasm_bindgen` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no method named `__wasm_bindgen_start` found for struct `StartWrapper` in the current scope
  --> ui-tests/start-function.rs:27:1
   |
27 | #[wasm_bindgen(start)]
   | ^^^^^^^^^^^^^^^^^^^^^^ method not found in `StartWrapper<Result<wasm_bindgen::JsValue, ()>>`
   |
   = note: this error originates in the attribute macro `wasm_bindgen` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no method named `__wasm_bindgen_start` found for struct `StartWrapper` in the current scope
  --> ui-tests/start-function.rs:30:1
   |
30 | #[wasm_bindgen(start)]
   | ^^^^^^^^^^^^^^^^^^^^^^ method not found in `StartWrapper<Result<wasm_bindgen::JsValue, wasm_bindgen::JsValue>>`
   |
   = note: this error originates in the attribute macro `wasm_bindgen` (in Nightly builds, run with -Z macro-backtrace for more info)
